--- a/style/main.css
+++ b/style/main.css
@@ -12,6 +12,7 @@
 body {
     background: var(--preto);
     font-family: 'Times New Roman', Times, serif;
+    color: #fff;
 }
 
 header .container{
@@ -38,3 +39,58 @@ header nav a:hover {
     color: #fff;
 }
 
+/* Filme princial */
+
+.filme-principal {
+    font-size: 16px;
+    background:  linear-gradient(rgba(0,0,0, 0.50), rgba(0,0,0, 0.50)100%), url(../assets/capa-house.jpg);
+
+    height: 600px;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.filme-principal .descricao {
+    margin-top: 10px;
+    margin-bottom: 50px;
+}
+
+.filme-principal .titulo {
+    margin-top: 20px;
+    font-size: 40px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.botao {
+    background-color: rgba(0,0,0, .5);
+    border: none;
+    color: #fff;
+
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+
+    cursor: pointer;
+    transition: 0.3s ease all;
+}
+
+.botao:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+.botao i {
+    margin-right: 8px;
+}
+
+.container {
+    margin-left: 20px;
+}
+
+.filme-principal .container {
+    width: 70%;
+}
